--- a/lw4/task1.html
+++ b/lw4/task1.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8" >
-	<title>Сайт Леонида Шабаршина</title>
+  <meta charset="UTF-8" >
+  <title>Сайт Леонида Шабаршина</title>
 </head> 
 <body>
-	<h1 >
-		<span>Макаронный монстр</span><br>
-		Без sms и регистрации
-	</h1>
+	<header>
+    <h1>Шабаршин Леонид<br>ПС-13</h1> 
+  </header>
+  <section>
+    <h2>Не я</h2>
+    <img src="../lw4/img/TkD1wVrJVVM.jpg" width="100" height="100" alt="не моё фото">
+    <p>
+      Так называемый Leonidek23 учился в 11 лицее г.Йошкар-Ола. Попал на ФИиВТ тк подал сюда документы. Люблю пожрать.
+      <img src="../lw4/img/bob-ross.jpg" width="100" height="100" alt="coolstorybob">
+    </p>
+    Мои увлечения:
+    <ul>
+      <li>Игры</li>
+      <li>Чтение манги, ронабе и тд</li>
+      <li>Пивко</li>
+    </ul>
+  </section>
 </body>
 </html>
