--- a/lw5/don't_do_it.html
+++ b/lw5/don't_do_it.html
@@ -1,9 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <title>Don't do it</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="header">
+    <img class="header__logo" src="img/logo.svg" alt="Don't do it">
+    <nav class="header__nav-bar">
+      <p class="header__text text_what-will">Что будет на курсе?</p>
+      <p class="header__text text_questions">Вопросы</p>
+      <p class="header__text text_author">Автор</p>
+    </nav>
+    <button class="header__button button-register">
+      Записаться на курс
+    </button>
+  </div>
+  <div class="top">
+    <h1 class="top__title">Не <span class="text_color">делай</span> это</h1>
+    <p class="top__text">Онлайн-курс для творческих людей, о том, как управлять своим временем </p>
+    <p><button class="top__button button-register">
+      Записаться на курс
+    </button></p>
+    <img class="top__image" src="img/gay.png"  alt="image">
+  </div>
+  <div class="short-description">
+    <div class="short-description__time">
+      <img class="short-description__image image-time" src="img/time.svg" alt="time">
+      <p class="short-description__text text-time">Для тех, у кого слишком много идей и слишком мало времени</p>
+    </div>
+    <div class="short-description__notebook">
+      <img class="short-description__image image-notebook" src="img/notebook.svg" alt="notebook">
+      <p class="short-description__text text-notebook">Метод «списка не дел», который позволит успевать и 
+      реализовывать</p>
+    </div>
+    <div class="short-description__target ">
+      <img class="short-description__image image-target" src="img/target.svg" alt="time">
+      <p class="short-description__text text-target">Курс научит творческих людей сосредоточиваться</p>
+    </div>        
+  </div>
+  <div class="blog">
+    <div class="blog__creation">
+      <img src="img/finances.png" alt="image">
+      <p class="blog__title title-creation">Ты не успеешь</p>
+      <p class="blog__text text-creation">Всех творческих людей объединяет одна проблема - отсутствие 
+      времени на реализацию идей. Как прибавить суткам часы, рассмотрим в нашем курсе.</p>
+    </div>
+    <div class="blog__deadline">
+      <img src="img/mind_blowing.png" alt="image">
+      <p class="blog__title title-deadline">Опять дедлайн</p>
+      <p class="blog__text text-deadline">В мире, где столько всего интересного, когда же успевать 
+      жить?</p>
+    </div>    
+  </div>
+  <div class="about-course">
+    <p class="about-course__title">На курсе ты <span class="text_color">сможешь</span></p>
+    <div class="about-course__first-step about-course_box">
+      <img class="about-course__img" src="img/finger_one.svg" alt="finger one">
+      <p class="about-course__first-step-text first-step-text">Понять, что нужно делать, а что делать не
+       стоит.</p>
+    </div>
+    <div class="about-course__second-step about-course_box">
+      <img class="about-course__img" src="img/finger_two.svg" alt="finger two">
+      <p class="about-course__second-step-text second-step-text">Перестать себя искусственно 
+      ограничивать.</p>
+    </div>  
+    <div class="about-course__third-step about-course_box">
+      <img class="about-course__img" src="img/finger_three.svg" alt="finger three">
+      <p class="about-course__third-step_text third-step-text">Определить сильные стороны 
+    и начать использовать слабые.</p>
+    </div> 
+    <div class="about-course__fourth-step about-course_box">
+      <img class="about-course__img" src="img/finger_four.svg" alt="finger four">
+      <p class="about-course__fourth-step_text fourth-step-text">Научиться достигать любой цели в 3 
+      понятных шага.</p>
+    </div> 
+    <div class="about-course__fifth-step about-course_box">
+      <img class="about-course__img" src="img/finger_five.svg" alt="finger five">
+      <p class="about-course__fifth-step_text fifth-step-text">Сотрудничать эффективно и с правильными 
+      людьми.</p>
+    </div> 
+    <div class="about-course__sixth-step about-course_box">
+      <img class="about-course__img" src="img/finger_six.svg" alt="finger six">
+      <p class="about-course__sixth-step_text sixth-step-text">Оптимизировать общение с клиентами 
+      и проведение совещаний.</p>
+    </div>      
+  </div>
+  <div class="footer">
+    <img class="footer__image" src="img/logo_footer.svg" alt="logo">
+  </div>
 </body>
 </html>
